style.css
.container {
    margin: 20px;
    max-width: 100%;
    max-height: 100%;
}

.flex-container {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: left;
    width: 100%;
    height: 100%;
}

h1,
h2,
h3,
h4,
h5,
h6 {
    margin: 0px;
}

.slide {
    justify-content: center;
    align-items: center;
}

.section {
    justify-content: center;
    align-items: center;
}

.jswidget {
    margin: 10px;
    width: 98%;
    height: 98%;
}

#resumeframe {
    height: 100%;
    width: 100%;
}

#section0 {
    background-image: linear-gradient(0deg, #9846ab, #5f4bc3);
    color: white;
}

#section1 {
    background-image: linear-gradient(0deg, #bc3476, #9846ab);
    color: white;
}

#section2 {
    background-image: linear-gradient(0deg, #c4683e, #bc3476);
    color: white;
}

#section3 {
    background-image: linear-gradient(0deg, #c42a53, #c4683e);
    color: white;
}

#section4 {
    background-image: linear-gradient(0deg, #9846ab, #c42a53);
    color: white;
}

#section5 {
    background-image: linear-gradient(0deg, #5f4bc3, #9846ab);
    color: white;
}

#section6 {
    background-image: linear-gradient(0deg, #4ba5c3, #5f4bc3);
    color: white;
}

#attributesID {
    background: #4ba5c3;
    color: white;
}

#profile {
    max-width: 55%;
    max-height: 55%;
    border-radius: 5px;
    border: 2px solid black;
}


#profile:hover {
    box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
}

#color-button {
    background-color: #4CAF50;
    border: none;
    border-radius: 10px;
    color: white;
    padding: 15px 32px;
    text-align: center;
    cursor: pointer;
    -webkit-transition-duration: 0.4s;
    transition-duration: 0.4s;
}

#color-button:hover {
    box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
}

/* Picture collage styling */
.picrow {
    display: flex;
    flex-wrap: wrap;
    padding: 0 4px;
    max-height: 100%;
}

/* Create four equal columns that sits next to each other */
.piccol {
    /* 1/4 - 1% for space for the padding*/
    flex: 19%;
    max-width: 20%;
    padding: 0 4px;
}

.piccol img {
    margin-top: 8px;
    vertical-align: middle;
    width: 100%;
}

/* Light Box Styling */
/* Styles the lightbox, removes it from sight and adds the fade-in transition */
.lightbox-target {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    position: absolute;
    top: -100%;
    width: 100%;
    background: rgba(0, 0, 0, .7);
    width: 100%;
    opacity: 0;
    transition: opacity .5s ease-in-out;
    overflow: hidden;

}

/* Styles the lightbox image, centers it vertically and horizontally, adds the zoom-in transition and makes it responsive using a combination of margin and absolute positioning */
.lightbox-target img {
    margin: auto;
    /*position: absolute;*/
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    max-height: 0%;
    max-width: 0%;
    box-shadow: 0px 0px 8px rgba(0, 0, 0, .3);
    box-sizing: border-box;
    transition: .5s ease-in-out;

}

.lightbox-target h2 {
    margin: 10px;
    text-shadow: 2px 2px black;
}

/* Styles the close link, adds the slide down transition */

a.lightbox-close {
    display: block;
    width: 50px;
    height: 50px;
    box-sizing: border-box;
    background: white;
    color: black;
    text-decoration: none;
    position: absolute;
    top: -80px;
    right: 0;
    transition: .5s ease-in-out;
}

/* Provides part of the "X" to eliminate an image from the close link */

a.lightbox-close:before {
    content: "";
    display: block;
    height: 30px;
    width: 1px;
    background: black;
    position: absolute;
    left: 26px;
    top: 10px;
    transform: rotate(45deg);
}

/* Provides part of the "X" to eliminate an image from the close link */

a.lightbox-close:after {
    content: "";
    display: block;
    height: 30px;
    width: 1px;
    background: black;
    position: absolute;
    left: 26px;
    top: 10px;
    transform: rotate(-45deg);
}

/* Uses the :target pseudo-class to perform the animations upon clicking the .lightbox-target anchor */

.lightbox-target:target {
    opacity: 1;
    top: 0;
    bottom: 0;
    /*overflow: scroll;*/
}

.lightbox-target:target img {
    max-height: 90%;
    max-width: 100%;
}

.lightbox-target:target a.lightbox-close {
    top: 0;
}



/* CSS Styling per device */

/* Smartphones (portrait and landscape) ----------- */
@media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
    /* Styles */
}

/* iPads (portrait and landscape) ----------- */
@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) {
    /* Styles */
}

/* Desktops and laptops ----------- */
@media only screen and (min-width : 1224px) {
    /* Styles */
}

/* iPhone 4 ----------- */
@media only screen and (-webkit-min-device-pixel-ratio : 1.5),
only screen and (min-device-pixel-ratio : 1.5) {
    /* Styles */
}

